--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -53,6 +53,7 @@
     </form>
   </div>
 </nav>
+    <script type="text/javascript" src="/static/bootstrap.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 </body>
 </html>
