--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,219 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="">
 
     <title>Bootstrap Template with Bootswatch Yeti</title>
-
-    <!-- Bootstrap core CSS -->
-    <!--    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">-->
-    <link href="/static/dist/theme/pulse/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <style>
-        /* Space out content a bit */
-        body {
-          padding-top: 20px;
-          padding-bottom: 20px;
-        }
-
-        /* Everything but the jumbotron gets side spacing for mobile first views */
-        .header,
-        .marketing,
-        .footer {
-          padding-right: 15px;
-          padding-left: 15px;
-        }
-
-        /* Custom page header */
-        .header {
-          border-bottom: 1px solid #e5e5e5;
-        }
-        /* Make the masthead heading the same height as the navigation */
-        .header h3 {
-          padding-bottom: 19px;
-          margin-top: 0;
-          margin-bottom: 0;
-          line-height: 40px;
-        }
-
-        /* Custom page footer */
-        .footer {
-          padding-top: 19px;
-          color: #777;
-          border-top: 1px solid #e5e5e5;
-        }
-
-        /* Customize container */
-        @media (min-width: 768px) {
-          .container {
-            max-width: 730px;
-          }
-        }
-        .container-narrow > hr {
-          margin: 30px 0;
-        }
-
-        /* Main marketing message and sign up button */
-        .jumbotron {
-          text-align: center;
-          border-bottom: 1px solid #e5e5e5;
-        }
-        .jumbotron .btn {
-          padding: 14px 24px;
-          font-size: 21px;
-        }
-
-        /* Supporting marketing content */
-        .marketing {
-          margin: 40px 0;
-        }
-        .marketing p + h4 {
-          margin-top: 28px;
-        }
-
-        /* Responsive: Portrait tablets and up */
-        @media screen and (min-width: 768px) {
-          /* Remove the padding we set earlier */
-          .header,
-          .marketing,
-          .footer {
-            padding-right: 0;
-            padding-left: 0;
-          }
-          /* Space out the masthead */
-          .header {
-            margin-bottom: 30px;
-          }
-          /* Remove the bottom border on the jumbotron for visual effect */
-          .jumbotron {
-            border-bottom: 0;
-          }
-        }
-    </style>
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="static/dist/theme/pulse/bootstrap.css" rel="stylesheet">
+    <link href="static/dist/theme/pulse/bootstrap.min.css" rel="stylesheet">
   </head>
-
+  
   <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="true" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#" data-toggle="tooltip" data-placement="bottom" title="This link takes you to the homepage">HOME</a></li>
-          <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="This link takes you to the about page">ABOUT</a></li>
-          <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="This link takes you to the contact page">CONTACT</a></li>
-        </ul>
-        <h3 class="text-muted">YETI BOOTSWATCH EXAMPLE</h3>
-      </div>
-      <div>
-        <div class="alert alert-warning fade in" role="alert">
-          <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <strong>Look at me!</strong> I used a bootstrap JavaScript component plugin.
+  <div class="navbar-collapse collapse show" id="navbarColor01" style="">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="/static/dist/theme/pulse/bootstrap.min.css">Action</a>
+          <a class="dropdown-item" href="">Another action</a>
+          <a class="dropdown-item" href="">Something else here</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Separated link</a>
         </div>
-      </div>
-
-      <div class="jumbotron">
-          <img src="http://37.media.tumblr.com/bddaeb8fe12eda6bb40cf6a0a18d9efa/tumblr_n8zm8ndGiY1st5lhmo1_1280.jpg" width="500" style="box-shadow: 2px 2px 2px #fff">
-        <h1>WELCOME TO BOOTSWATCH</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        
-        <p><a class="btn btn-lg btn-success" href="#" role="button" data-toggle="modal" data-target="#myModal">OPEN MODEL</a></p>
-
-        <!-- Modal -->
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-              </div>
-              <div class="modal-body">
-                No message available.
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">CLOSE</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">ALSO CLOSE</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-      </div>
-
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-
-        <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>  
-      </div>
-        <div class="row">
-            <table class="table">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>Username</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-        </tr>
-      </tbody>
-    </table>
-        </div>
-
-      <div class="footer">
-        <p>&copy; James Futhey 2014. No rights reserved.</p>
-      </div>
-
-    </div> <!-- /container -->
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+    <script type="text/javascript" src="/static/bootstrap.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/alert.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/tooltip.min.js"></script>
-    <script type="text/javascript">
-    $(function(){
-       $('[data-toggle="tooltip"]').tooltip();
-    });
-</script>
-  </body>
+</body>
 </html>
