--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="">
 
     <title>Bootstrap Template with Bootswatch Yeti</title>
-    <link href="static/dist/theme/pulse/bootstrap.css" rel="stylesheet">
-    <link href="static/dist/theme/pulse/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  // <link href="static/dist/theme/pulse/bootstrap.css" rel="stylesheet">
   </head>
   
   <body>
@@ -53,7 +53,8 @@
     </form>
   </div>
 </nav>
-    <script type="text/javascript" src="/static/bootstrap.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    // <script type="text/javascript" src="/static/bootstrap.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 </body>
 </html>
