--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="static/dist/theme/pulse/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <title>Hello, world!</title>
   </head>
   <body>
@@ -59,7 +60,34 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
+      <footer class="footer">
+         <div id="buttonGroup" class="btn-group selectors" role="group" aria-label="Basic example">
+            <button id="home" type="button" class="btn btn-secondary button-active">
+               <div class="selector-holder">
+                  <i class="material-icons">home</i>
+                  <span>Home</span>
+               </div>
+            </button>
+            <button id="feed" type="button" class="btn btn-secondary button-inactive">
+               <div class="selector-holder">
+                  <i class="material-icons">view_list</i>
+                  <span>Feed</span>
+               </div>
+            </button>
+            <button id="create" type="button" class="btn btn-secondary button-inactive">
+               <div class="selector-holder">
+                  <i class="material-icons">create</i>
+                  <span>Create</span>
+               </div>
+            </button>
+            <button id="account" type="button" class="btn btn-secondary button-inactive">
+               <div class="selector-holder">
+                  <i class="material-icons">account_circle</i>
+                  <span>Account</span>
+               </div>
+            </button>
+         </div>
+      </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
