--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -60,6 +60,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+    <div class="fixed-bottom">
       <footer class="footer">
          <div id="buttonGroup" class="btn-group selectors" role="group" aria-label="Basic example">
             <button id="home" type="button" class="btn btn-secondary button-active">
@@ -88,6 +89,7 @@
             </button>
          </div>
       </footer>
+      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
