--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -73,28 +73,34 @@
   </a>
 </div>
     <div class="fixed-bottom">
-<ul class="nav nav-pills">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
-  </li>
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-    <div class="dropdown-menu" style="">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Separated link</a>
-    </div>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#">Disabled</a>
-  </li>
-</ul>
-
+      <footer class="footer">
+         <div id="buttonGroup" class="btn-group selectors" role="group" aria-label="Basic example">
+            <button id="home" type="button" class="btn btn-secondary button-active">
+               <div class="selector-holder">
+                  <i class="material-icons">home</i>
+                  <span>Home</span>
+               </div>
+            </button>
+            <button id="feed" type="button" class="btn btn-secondary button-inactive">
+               <div class="selector-holder">
+                  <i class="material-icons">view_list</i>
+                  <span>Feed</span>
+               </div>
+            </button>
+            <button id="create" type="button" class="btn btn-secondary button-inactive">
+               <div class="selector-holder">
+                  <i class="material-icons">create</i>
+                  <span>Create</span>
+               </div>
+            </button>
+            <button id="account" type="button" class="btn btn-secondary button-inactive">
+               <div class="selector-holder">
+                  <i class="material-icons">account_circle</i>
+                  <span>Account</span>
+               </div>
+            </button>
+         </div>
+      </footer>
       </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
