--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -72,35 +72,25 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+    
     <div class="fixed-bottom">
-      <footer class="footer">
+            <div class="container my-5">
+  <div class="row">
+            <footer class="footer">
          <div id="buttonGroup" class="btn-group selectors" role="group" aria-label="Basic example">
-            <button id="home" type="button" class="btn btn-secondary button-active">
-               <div class="selector-holder">
+
+    <div class="col-md-4 col-lg-2">
+      <button class="btn btn-secondary button-active">Sign up</button>
+                     <div class="selector-holder">
                   <i class="material-icons">home</i>
                   <span>Home</span>
                </div>
-            </button>
-            <button id="feed" type="button" class="btn btn-secondary button-inactive">
-               <div class="selector-holder">
-                  <i class="material-icons">view_list</i>
-                  <span>Feed</span>
-               </div>
-            </button>
-            <button id="create" type="button" class="btn btn-secondary button-inactive">
-               <div class="selector-holder">
-                  <i class="material-icons">create</i>
-                  <span>Create</span>
-               </div>
-            </button>
-            <button id="account" type="button" class="btn btn-secondary button-inactive">
-               <div class="selector-holder">
-                  <i class="material-icons">account_circle</i>
-                  <span>Account</span>
-               </div>
-            </button>
-         </div>
-      </footer>
+    </div>
+  </div>
+  
+</div>
+
+
       </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
