--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -72,11 +72,10 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-    
+    <footer>
     <div class="fixed-bottom">
             <div class="container my-5">
   <div class="row">
-            <footer class="footer">
          <div id="buttonGroup" class="btn-group selectors" role="group" aria-label="Basic example">
 
     <div class="col-md-4 col-lg-2">
@@ -89,6 +88,7 @@
   </div>
   
 </div>
+              </footer>
 
 
       </div>
