--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -81,6 +81,8 @@
     <div class="col-md-4 col-lg-2">
       <button class="btn btn-secondary button-active">Sign up</button>
     </div>
+               <div class="col-md-5 col-lg-2">
+      <button class="btn btn-secondary button-active">Sign up</button>
   </div>
   
 </div>
