--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -78,11 +78,13 @@
   <div class="row">
          <div id="buttonGroup" class="btn-group selectors" role="group" aria-label="Basic example">
 
-    <div class="col-md-4 col-lg-2">
-      <button class="btn btn-secondary button-active">Sign up</button>
+    <div class="col-md-5 col-lg-2">
+<button type="button" class="btn btn-primary btn-lg">Large button</button>
+
     </div>
-               <div class="col-md-5 col-lg-2">
-      <button class="btn btn-secondary button-active">Sign up</button>
+               <div class="col-md-7 col-lg-2">
+<button type="button" class="btn btn-primary btn-lg">Large button</button>
+
   </div>
   
 </div>
