--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -86,7 +86,10 @@
 <button type="button" class="btn btn-primary btn-lg">Large button</button>
 
   </div>
-  
+                 <div class="col-md-7 col-lg-2">
+<button type="button" class="btn btn-primary btn-lg">Large button</button>
+
+  </div>
 </div>
               </footer>
 
