--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,17 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="static/dist/theme/pulse/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <style>
-      .footer {
-    position:fixed;
-     bottom: 0;
-     width: 100%;
-     height: 60px;
-     background-color: #f5f5f5;
-
-    border-top: 1px solid transparent;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+.navbar-brand
+{
+  font-size: 100px;
 }
     </style>
     <title>Hello, world!</title>
