--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -44,16 +44,35 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://i.imgur.com/Mc1IaWF.png" alt="First slide">
+      <img class="d-block w-100" src="static/img/1.jpeg" alt=">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://i.imgur.com/Mc1IaWF.png" alt="Second slide">
+      <img class="d-block w-100" src="static/img/2.jpeg" alt="">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://i.imgur.com/Mc1IaWF.png" alt="Third slide">
+      <img class="d-block w-100" src="static/img/3.jpeg" alt="">
+    </div>
+                      <div class="carousel-item">
+      <img class="d-block w-100" src="static/img/3.jpeg" alt="">
+    </div>
+                                                                   <div class="carousel-item">
+      <img class="d-block w-100" src="static/img/4.jpeg" alt="">
+    </div>
+                                                                   <div class="carousel-item">
+      <img class="d-block w-100" src="static/img/5.jpeg" alt="">
+    </div>
+                                                                   <div class="carousel-item">
+      <img class="d-block w-100" src="static/img/6.jpeg" alt="">
+    </div>
+                                                                   <div class="carousel-item">
+      <img class="d-block w-100" src="static/img/7.jpeg" alt="">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
