--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -51,7 +51,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="static/img/1.jpeg" alt=">
+      <img class="d-block w-100" src="static/img/1.jpeg" alt="">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="static/img/2.jpeg" alt="">
