--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -59,19 +59,19 @@
     <div class="carousel-item">
       <img class="d-block w-100" src="static/img/3.jpeg" alt="">
     </div>
-                      <div class="carousel-item">
+                      <div class="carousel-item active img-fluid">
       <img class="d-block w-100" src="static/img/3.jpeg" alt="">
     </div>
-                                                                   <div class="carousel-item">
+                                                                   <div class="carousel-item active img-fluid">
       <img class="d-block w-100" src="static/img/4.jpeg" alt="">
     </div>
-                                                                   <div class="carousel-item">
+                                                                   <div class="carousel-item active img-fluid">
       <img class="d-block w-100" src="static/img/5.jpeg" alt="">
     </div>
-                                                                   <div class="carousel-item">
+                                                                   <div class="carousel-item active img-fluid">
       <img class="d-block w-100" src="static/img/6.jpeg" alt="">
     </div>
-                                                                   <div class="carousel-item">
+                                                                   <div class="carousel-item active img-fluid">
       <img class="d-block w-100" src="static/img/7.jpeg" alt="">
     </div>
   </div>
