--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,6 +13,10 @@
 {
   font-size: 40px;
 }
+      .carousel-inner > .item > img {
+  width:640px;
+  height:360px;
+}
     </style>
     <title>Hello, world!</title>
   </head>
@@ -59,19 +63,19 @@
     <div class="carousel-item">
       <img class="d-block w-100" src="static/img/3.jpeg" alt="">
     </div>
-                      <div class="carousel-item active img-fluid">
+                      <div class="carousel-item">
       <img class="d-block w-100" src="static/img/3.jpeg" alt="">
     </div>
-                                                                   <div class="carousel-item active img-fluid">
+                                                                   <div class="carousel-item">
       <img class="d-block w-100" src="static/img/4.jpeg" alt="">
     </div>
-                                                                   <div class="carousel-item active img-fluid">
+                                                                   <div class="carousel-item">
       <img class="d-block w-100" src="static/img/5.jpeg" alt="">
     </div>
-                                                                   <div class="carousel-item active img-fluid">
+                                                                   <div class="carousel-item">
       <img class="d-block w-100" src="static/img/6.jpeg" alt="">
     </div>
-                                                                   <div class="carousel-item active img-fluid">
+                                                                   <div class="carousel-item">
       <img class="d-block w-100" src="static/img/7.jpeg" alt="">
     </div>
   </div>
