--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">શિલ્પાબેન સાડીવાળા</a><p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+  <a class="navbar-brand" href="#">શિલ્પાબેન સાડીવાળા</a><p class="lead">House of Sarees - An Ethnic Designer Studio</p>
   
   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
