--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,9 +13,9 @@
 {
   font-size: 40px;
 }
-      .carousel-inner > .item > img {
-  width:640px;
-  height:360px;
+      .carousel-inner > .c arousel-item > img {
+        width:640px;
+        height:360px;
 }
     </style>
     <title>Hello, world!</title>
@@ -36,10 +36,10 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#">About Us </a>
       </li>
     </ul>
   </div>
