--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,7 +13,8 @@
 {
   font-size: 40px;
 }
-      .carousel-inner > .c arousel-item > img {
+      .carousel-inner 
+      {
         width:640px;
         height:360px;
 }
