--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -97,8 +97,9 @@
 </svg>
 Explore </button>
                                            <div class="col-md-6 col-lg-2">
-
-<button type="button" ></button>
+<button type="button" class="btn bg-transparent"></button>
+.
+</button>
                  </div>
 
                  </div>
