--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -96,6 +96,7 @@
 </svg>
 Explore </button>
            </div>
+           <div class="col-md-10 col-lg-3"></div>
         <div class="col-md-10 col-lg-3">
 <button type="button" class="btn btn-primary btn-lg">
   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slack" viewBox="0 0 16 16">
@@ -103,9 +104,6 @@ Explore </button>
 </svg>
 Explore </button>
                  </div>
-
-
-
       </div>
                   </footer>
     <!-- Optional JavaScript -->
