--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -99,7 +99,8 @@ Explore </button>
            <div class="col-md-10 col-lg-3"></div>
         <div class="col-md-10 col-lg-3"></div>
            <div class="col-md-10 col-lg-3"></div>
-           
+           <div class="col-md-10 col-lg-3"></div>
+           <div class="col-md-10 col-lg-3"></div>
            <div class="col-md-10 col-lg-3"></div>
 <button type="button" class="btn btn-primary btn-lg">
   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slack" viewBox="0 0 16 16">
